--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,3 @@
-body {
-    margin: 0;
-    padding: 0;
-    font-family: sans-serif;
-    padding-top: 65px;
+#root {
+    background-color: #ababab;
 }
